# Ignis

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  THIRD_PARTY_LICENSES.md
Editor/: CMakeLists.txt  assets
Editor/assets/shaders/: blinn.glsl  example.glsl
Editor/resources/shaders/: BRDFIntegration.glsl  DebugLine.glsl  EquirectToCube.glsl  IgnisPBR.glsl  IrradianceConvolution.glsl  PrefilterGGX.glsl  Skybox.glsl  Text.glsl  UI.glsl  diffuse.glsl
Editor/resources/templates/: .gitignore.template  CMakeLists.txt.template  CMakePresets.json.template  ScriptModuleExports.cpp.template
Editor/src/: EditorApp.cpp  EditorApp.h  EditorLayer.cpp  EditorLayer.h  EditorSceneLayer.cpp  pch.h
Editor/src/Core/: EditorConsoleSink.cpp
Editor/src/Editor/: EditorApp.cpp  EditorApp.h  EditorLayer.cpp  EditorLayer.h  EditorSceneLayer.cpp  EditorSceneLayer.h  PanelManager.cpp
Editor/src/Editor/Core/: EditorConsoleSink.cpp  EditorConsoleSink.h  GitHelper.cpp  ProcessRunner.cpp  ProcessRunner.h  ProjectManager.cpp  ProjectManager.h  TemplateProcessor.cpp  TemplateProcessor.h
Editor/src/Editor/Panels/: AssetBrowserPanel.cpp  AssetBrowserPanel.h  ControlPanel.cpp  ControlPanel.h  EditorCamera.cpp  EditorCamera.h  EditorConsolePanel.cpp  EditorConsolePanel.h  EditorPanel.h  EngineStatsPanel.cpp  EngineStatsPanel.h  PanelManager.cpp  PhysicsDebugPanel.cpp  PhysicsDebugPanel.h  PropertiesPanel.cpp  PropertiesPanel.h  PropertiesPanel_AssetSettings.cpp  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  TabbedPanelContainer.cpp  TabbedPanelContainer.h  ViewportPanel.cpp  ViewportPanel.h
Editor/src/Editor/Panels/AssetBrowser/: AssetBrowserItem.cpp  AssetBrowserItem.h
Editor/src/Editor/Project/: ProjectManager.cpp
Editor/src/Panels/: EditorCamera.cpp  EditorCamera.h  EditorConsolePanel.h  EngineStatsPanel.cpp  EngineStatsPanel.h  PropertiesPanel.cpp  PropertiesPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
Ignis/: CMakeLists.txt  Ignis.cpp  Ignis.h
Ignis/src/: CMakeLists.txt  Ignis.h  pch.h
Ignis/src/Examples/: EventExample.cpp  EventExample.h
Ignis/src/Ignis/Asset/: Asset.h  AssetImportOptions.h  AssetImportTypes.h  AssetImporter.h  AssetLoadContext.h  AssetManager.cpp  AssetManager.h  AssetSerializer.cpp  AssetSerializer.h  AssetType.h  AudioImporter.cpp  AudioImporter.h  File.cpp  FontImporter.cpp  FontImporter.h  MeshImporter.cpp  MeshImporter.h  TextureImporter.cpp  TextureImporter.h  VFS.cpp  VFS.h
Ignis/src/Ignis/Audio/: AudioClip.h  AudioEngine.cpp  AudioEngine.h  AudioSystem.cpp  AudioSystem.h
Ignis/src/Ignis/Core/: API.h  Application.cpp  Application.h  EditorConsoleSink.cpp  EditorConsoleSink.h  EntryPoint.cpp  EntryPoint.h  FileDialog.h  FileSystem.cpp  FileSystem.h  Input.cpp  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  UUID.cpp  UUID.h  Window.cpp  Window.h
Ignis/src/Ignis/Core/Events/: Event.h  KeyEvents.h  MouseEvents.h  WindowEvents.h
Ignis/src/Ignis/Core/File/: File.cpp  File.h  FileDialog.h  FileSystem.cpp  FileSystem.h  Path.cpp  Path.h  VFS.cpp  VFS.h
Ignis/src/Ignis/Debug/: DebugPanel.h  EngineStatsPanel.cpp  EngineStatsPanel.h  PhysicsDebugPanel.cpp  PhysicsDebugPanel.h
Ignis/src/Ignis/Editor/: EditorCamera.cpp  EditorCamera.h  EditorConsolePanel.cpp  EditorConsolePanel.h  EditorLayer.cpp  EditorLayer.h  EditorPanel.h  PanelManager.cpp  PanelManager.h  PropertiesPanel.cpp  PropertiesPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
Ignis/src/Ignis/Events/: Event.h  KeyEvents.h  MouseEvents.h  WindowEvents.h
Ignis/src/Ignis/Examples/: EventExample.h
Ignis/src/Ignis/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h  ImGuiTextureHelper.cpp  ImGuiTextureHelper.h
Ignis/src/Ignis/Physics/: PhysicsBody.cpp  PhysicsBody.h  PhysicsTypes.h  PhysicsWorld.cpp  PhysicsWorld.h
Ignis/src/Ignis/Project/: Project.cpp  Project.h  ProjectSerializer.cpp  ProjectSerializer.h
Ignis/src/Ignis/Renderer/: Camera.cpp  Camera.h  DebugRenderer.cpp  DebugRenderer.h  EditorCamera.cpp  EditorCamera.h  EditorOverlayRenderer.cpp  EditorOverlayRenderer.h  Environment.h  Font.h  Framebuffer.cpp  Framebuffer.h  GraphicsAPI.h  IBLBaker.cpp  IBLBaker.h  Image.cpp  Image.h  IndexBuffer.cpp  IndexBuffer.h  Material.cpp  Material.h  MaterialData.h  Mesh.cpp  Mesh.h  PBRPipeline.cpp  PBRPipeline.h  Pipeline.h  RenderState.h  Renderer.cpp  Renderer.h  RendererContext.cpp  RendererContext.h  SceneRenderer.cpp  SceneRenderer.h  Shader.cpp  Shader.h  ShaderLibrary.cpp  ShaderLibrary.h  ShaderUniform.h  Texture.cpp  (+6 more)
Ignis/src/Ignis/Scene/: AsyncSceneLoader.cpp  AsyncSceneLoader.h  Components.h  Entity.cpp  Entity.h  EntityImpl.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneManager.cpp  SceneManager.h  SceneSerializer.cpp  SceneSerializer.h
Ignis/src/Ignis/Script/: Script.h  ScriptAutoRegistry.h  ScriptBehaviour.h  ScriptModule.cpp  ScriptModule.h  ScriptRegistry.cpp  ScriptRegistry.h
Ignis/src/Ignis/Serialization/: AssetPack.cpp  AssetPack.h  AssetPackFile.h  AssetPackSerializer.cpp  AssetPackSerializer.h  FileStream.cpp  FileStream.h  StreamReader.cpp  StreamReader.h  StreamWriter.cpp  StreamWriter.h
Ignis/src/Ignis/UI/: UIComponents.h  UIRenderer.cpp  UIRenderer.h  UISystem.cpp  UISystem.h
Runtime/: CMakeLists.txt
Runtime/src/: RuntimeApp.cpp  RuntimeApp.h  RuntimeSceneLayer.cpp  RuntimeSceneLayer.h
Sandbox/: CMakeLists.txt
Sandbox/assets/images/: citrus_orchard_puresky_4k_irradiance.hdr
Sandbox/assets/shaders/: IgnisPBR.glsl  Skybox.glsl  blinn.glsl  example.glsl
Sandbox/src/: Example.cpp  Sandbox.cpp  Sandbox.h  SandboxLayer.cpp  SandboxLayer.h
Sandbox/src/Editor/: EditorApp.cpp  EditorApp.h  EditorLayer.cpp  PanelManager.h
Sandbox/src/Editor/Core/: EditorConsoleSink.cpp  EditorConsoleSink.h
Sandbox/src/Editor/Panels/: EditorCamera.cpp  EditorConsolePanel.cpp  EditorConsolePanel.h  EngineStatsPanel.cpp  EngineStatsPanel.h  PhysicsDebugPanel.cpp  PhysicsDebugPanel.h  PropertiesPanel.cpp  PropertiesPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
(+33 files in other folders)
